--- a/views/header.haml
+++ b/views/header.haml
@@ -3,4 +3,13 @@
 	%head
 		%title White Chapel Password Cracking
 	%body
-		Hello, this should actually be something a bit more dynamic
+		%h1 White Chapel
+		%h2 The Password Auditing Solution
+
+		%ul
+			%li Search goes here
+			%li Upload dump for mass searching goes here
+			%li planned support (pwdump format, /etc/shadow format, and per-lin)
+			%li Upload dictionary for mass add goes here
+			%li Que for cracking (passwords get auto-added to db)
+			%li Start and stop John auto word generator
