--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Sinatra + Twitter Bootstrap</title>
+  	<title>White Chapel - Password Auditing Framework</title>
     <script src="/lib/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
@@ -13,30 +13,13 @@
         <div class="container">
 
             <a class="brand" href="#">
-              Sinatra + Twitter Bootstrap
+              White Chapel - Password Auditing Framework
             </a>
 
             <ul class="nav">
               <li><a href="/">Home</a></li>
-              <li><a href="/secure/place">Secret</a></li>
+              <li><a href="/upload">Upload</a></li>
             </ul>
-
-            <ul class="nav pull-right">
-              <li class="dropdown">
-                <a href="#"
-                      class="dropdown-toggle"
-                      data-toggle="dropdown">
-                      <%=username%>
-                      <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                      <li><a href="/login/form">Login</a></li>
-                      <li><a href="/logout">Logout</a></li>
-                </ul>
-              </li>
-            </ul>
-
-
         </div>
       </div>
     </div>
