--- a/views/upload.erb
+++ b/views/upload.erb
@@ -45,7 +45,7 @@
 
 		<div class="span5">
 			<h3>Shadow File:</h3>
-			Format = Administrator:500:LMHASH:NTLMHASH:::
+			Non-functioning (Right now none of the hash types in shadow files are supported)
 			<form action="/upload/shadowfile" method="post" accept-charset="utf-8" enctype='multipart/form-data' >
 				<div class="fileupload fileupload-new" data-provides="fileupload">
 					<div class="input-append">
