--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
   	<title>White Chapel - Password Auditing Framework</title>
     <script src="/lib/jquery-1.8.3.min.js" type="text/javascript"></script>
+    <script src="/lib/jquery.tablesorter.min.js" type="text/javascript"></script>
     <script src="/lib/bootstrap/js/jasny-bootstrap.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
